more more gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,16 @@ public/
 npm-debug.log
 .eslintcache
 .gatsby-context.js
+gatsby-starter-lumen.iml
 .idea
 path---*.js
 path---*.js.map
-*.png
-*.jpg
+*.eot
 *.html
-sw.js
+*.jpg
+*.png
 *.woff*
 *.ttf
-*.eot
-gatsby-starter-lumen.iml
+*.xml
+sw.js
 yarn.lock
