--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "gatsby": "^1.9.164",
+    "gatsby-cli": "^1.1.53",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-catch-links": "^1.0.14",
     "gatsby-plugin-feed": "^1.3.15",
@@ -43,6 +44,7 @@
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-transformer-remark": "^1.7.28",
     "gatsby-transformer-sharp": "^1.6.16",
+    "global": "^4.3.2",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-disqus-comments": "^1.1.1",
