--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,8 @@ public/
 npm-debug.log
 .eslintcache
 .gatsby-context.js
-gatsby-starter-lumen.iml
 .idea
-path---*.js
-path---*.js.map
-*.eot
-*.html
-*.jpg
-*.png
-*.woff*
-*.ttf
-*.xml
-sw.js
-yarn-error.log
+gatsby-starter-lumen.iml
 yarn.lock
+.DS_Store
+yarn-error.log
