--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-cli": "^1.1.53",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-catch-links": "^1.0.14",
+    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-feed": "^1.3.15",
     "gatsby-plugin-google-analytics": "^1.0.15",
     "gatsby-plugin-google-fonts": "^0.0.4",
